--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "@material-ui/icons": "^4.11.2",
+    "gsap": "^3.7.1",
     "next": "latest",
+    "node-sass": "^6.0.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "sass": "^1.36.0",
+    "spltjs": "^1.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
