--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-intersection-observer": "^8.32.0",
     "sass": "^1.36.0",
     "spltjs": "^1.1.0"
   },
