--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "gsap": "^3.7.1",
     "next": "latest",
@@ -14,7 +15,8 @@
     "react-dom": "^17.0.2",
     "react-intersection-observer": "^8.32.0",
     "sass": "^1.36.0",
-    "spltjs": "^1.1.0"
+    "spltjs": "^1.1.0",
+    "typeit": "^7.0.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
