--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "@headlessui/react": "^1.4.0",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "@notionhq/client": "^0.2.3",
     "gsap": "^3.7.1",
     "next": "latest",
-    "node-sass": "^6.0.1",
+    "next-seo": "^4.26.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-intersection-observer": "^8.32.0",
