--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@notionhq/client": "^0.2.3",
+    "airtable": "^0.11.1",
     "gsap": "^3.7.1",
     "next": "latest",
     "next-seo": "^4.26.0",
