--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^17.0.2",
     "react-intersection-observer": "^8.32.0",
     "sass": "^1.36.0",
+    "sitemap": "^7.0.0",
     "spltjs": "^1.1.0",
     "typeit": "^7.0.4"
   },
