fixed SEO config

--- a/next-seo.config
+++ b/next-seo.config
@@ -1,5 +1,5 @@
 export default {
-    defaultTitle:'Leroy Clarke Jr. | Front=end Engineer',
+    defaultTitle:'Leroy Clarke Jr. | Front-end Engineer',
     defaultDescription: 'Self taught Front-end Engineer helping ambitious people and brands create aesthetically pleasing web app experiences.',
   openGraph: {
     type: 'website',
