--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react-intersection-observer": "^8.32.0",
     "sass": "^1.36.0",
     "sitemap": "^7.0.0",
+    "slugify": "^1.6.0",
+    "smoothscroll-polyfill": "^0.4.4",
     "spltjs": "^1.1.0",
     "typeit": "^7.0.4"
   },
