--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@notionhq/client": "^0.2.3",
     "airtable": "^0.11.1",
     "gsap": "^3.7.1",
-    "next": "latest",
+    "next": "^12.0.4",
     "next-seo": "^4.26.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
