--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
     "sass": "^1.36.0",
     "sitemap": "^7.0.0",
     "slugify": "^1.6.2",
-    "smoothscroll-polyfill": "^0.4.4",
-    "spltjs": "^1.1.0",
     "typeit": "^7.0.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
+    "eslint": "^7.32.0",
+    "eslint-config-next": "^11.1.2",
     "postcss": "^8.3.5",
     "tailwindcss": "^2.2.4"
   }
