--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@headlessui/react": "^1.4.0",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "@netlify/plugin-nextjs": "^3.9.2",
     "@notionhq/client": "^0.2.3",
     "airtable": "^0.11.1",
     "gsap": "^3.7.1",
